Updates from Overleaf

--- a/mandatory/acronyms.tex
+++ b/mandatory/acronyms.tex
@@ -280,6 +280,15 @@
   extra               = {Driver assistance feature that automatically adjusts vehicle speed to maintain a safe gap to the preceding vehicle using radar or camera sensors.}
 }
 
+\DeclareAcronym{ecoacc}{
+  short               = Eco-Cooperative ACC ,
+  long                = Eco-Cooperative Adaptive Cruise Control ,
+  short-plural-form   = Eco-Cooperative ACC systems ,
+  long-plural-form    = Eco-Cooperative Adaptive Cruise Control systems ,
+  extra               = {An enhancement of adaptive cruise control that not only maintains safe following distances but also optimises fuel efficiency and emissions by cooperating with traffic signal information and surrounding vehicle data.}
+}
+
+
 \DeclareAcronym{tmc}{
   short               = TMC ,
   long                = Traffic Management Centre ,
@@ -302,4 +311,108 @@
   short-plural-form   = OBUs ,
   long-plural-form    = On-Board Units ,
   extra               = {Vehicle-mounted device enabling communication with infrastructure and other vehicles, processing and transmitting data for functions like \ac{v2x}, traffic information, and tolling.}
+}
+
+\DeclareAcronym{milp}{
+  short               = MILP ,
+  long                = Mixed Integer Linear Programming ,
+  short-plural-form   = MILP methods ,
+  long-plural-form    = Mixed Integer Linear Programming methods ,
+  extra               = {An optimisation framework that formulates problems as linear objective functions with both continuous and integer variables, suitable for handling logical constraints and network-level decisions in \ac{glosa} applications.}
+}
+
+\DeclareAcronym{mpg}{
+  short               = MpG ,
+  long                = Miles per Gallon ,
+  short-plural-form   = MPG ratings ,
+  long-plural-form    = Miles per Gallon ratings ,
+  extra               = {A fuel economy metric used primarily in the United States to quantify how many miles a vehicle can travel using one gallon of fuel.}
+}
+
+\DeclareAcronym{ev}{
+  short               = EV ,
+  long                = Electric Vehicle ,
+  short-plural-form   = EVs ,
+  long-plural-form    = Electric Vehicles ,
+  extra               = {Vehicles powered solely by electric energy storage systems, offering zero tailpipe emissions and improved energy efficiency compared to internal combustion engine vehicles.}
+}
+
+\DeclareAcronym{ga}{
+  short               = GA ,
+  long                = Genetic Algorithm ,
+  short-plural-form   = GAs ,
+  long-plural-form    = Genetic Algorithms ,
+  extra               = {A population-based, stochastic search algorithm inspired by natural evolution, used to find approximate solutions for complex optimisation problems by simulating selection, crossover, and mutation processes.}
+}
+
+\DeclareAcronym{np}{
+  short               = NP ,
+  long                = Non-deterministic Polynomial time ,
+  short-plural-form   = NP problems ,
+  long-plural-form    = Non-deterministic Polynomial time problems ,
+  extra               = {A complexity class for decision problems where a proposed solution can be verified in polynomial time, but finding the solution may not be achievable in polynomial time.}
+}
+
+\DeclareAcronym{mdp}{
+  short               = MDP ,
+  long                = Markov Decision Process ,
+  short-plural-form   = MDPs ,
+  long-plural-form    = Markov Decision Processes ,
+  extra               = {A mathematical framework for modelling sequential decision-making problems under uncertainty, where the outcome of an action depends only on the current state and not on the past sequence of events (Markov property).}
+}
+
+\DeclareAcronym{oem}{
+  short               = OEM ,
+  long                = Original Equipment Manufacturer ,
+  short-plural-form   = OEMs ,
+  long-plural-form    = Original Equipment Manufacturers ,
+  extra               = {A company that produces parts or equipment that may be marketed by another manufacturer, such as vehicles or vehicle components supplied to branded automakers.}
+}
+
+\DeclareAcronym{tli}{
+  short               = TLI ,
+  long                = Traffic Light Information ,
+  short-plural-form   = TLI messages ,
+  long-plural-form    = Traffic Light Information messages ,
+  extra               = {A data exchange standard that provides real-time signal phase and timing (SPaT) and map data to connected vehicles, enabling better anticipation of signal changes for eco-driving and safety applications.}
+}
+
+\DeclareAcronym{ead}{
+  short               = EAD ,
+  long                = Eco-Approach and Departure ,
+  short-plural-form   = EAD strategies ,
+  long-plural-form    = Eco-Approach and Departure strategies ,
+  extra               = {A driving strategy that adjusts vehicle speed and acceleration profiles when approaching and departing signalised intersections, with the goal of reducing fuel consumption and emissions while improving overall traffic flow.}
+}
+
+\DeclareAcronym{icw}{
+  short               = ICW ,
+  long                = Intersection Collision Warning ,
+  short-plural-form   = ICW systems ,
+  long-plural-form    = Intersection Collision Warning systems ,
+  extra               = {Safety systems that warn drivers of potential collision risks at intersections, using vehicle and infrastructure data to alert drivers and reduce the likelihood of crashes.}
+}
+
+\DeclareAcronym{map}{
+  short               = MAP ,
+  long                = Map Data Message ,
+  short-plural-form   = MAP messages ,
+  long-plural-form    = Map Data Messages ,
+  extra               = {A standardised V2X message that provides intersection geometry, lane-level topology, and connectivity data to support eco-driving and automated vehicle applications.}
+}
+
+\DeclareAcronym{gdpr}{
+  short               = GDPR ,
+  long                = General Data Protection Regulation ,
+  short-plural-form   = GDPR rules ,
+  long-plural-form    = General Data Protection Regulation rules ,
+  extra               = {A European Union regulation that sets guidelines for the collection and processing of personal data from individuals who live in the European Union.}
+}
+
+\DeclareAcronym{cav}{
+  short               = CAV ,
+  long                = Connected and Automated Vehicle ,
+  short-plural-form   = CAVs ,
+  long-plural-form    = Connected and Automated Vehicles ,
+  extra               = {Vehicles equipped with connectivity and automation technologies that allow them to communicate with other vehicles, infrastructure, and control systems, enhancing safety, efficiency and environmental performance.}
 }
