--- a/references.bib
+++ b/references.bib
@@ -622,3 +622,321 @@ DOI = {10.3390/s23156888}
   pages={918-923},
   keywords={Vehicles;Fuels;Roads;Measurement;Acceleration;Data models;IEEE standards;vehicular communications;traffic light advisory;fuel consumption;traffic congestion},
   doi={10.1109/IWCMC.2011.5982524}}
+
+@INPROCEEDINGS{Fayazi2017,
+  author={Fayazi, S. Alireza and Vahidi, Ardalan and Luckow, Andre},
+  booktitle={2017 American Control Conference (ACC)}, 
+  title={Optimal scheduling of autonomous vehicle arrivals at intelligent intersections via MILP}, 
+  year={2017},
+  volume={},
+  number={},
+  pages={4920-4925},
+  keywords={Safety;Autonomous vehicles;Acceleration;Delays;Optimal scheduling},
+  doi={10.23919/ACC.2017.7963717}}
+
+@inproceedings{Ashtiani2018
+,
+   title={Multi-Intersection Traffic Management for Autonomous Vehicles via Distributed Mixed Integer Linear Programming},
+   url={http://dx.doi.org/10.23919/ACC.2018.8431656},
+   DOI={10.23919/acc.2018.8431656},
+   booktitle={2018 Annual American Control Conference (ACC)},
+   publisher={IEEE},
+   author={Ashtiani, Faraz and Fayazi, S. Alireza and Vahidi, Ardalan},
+   year={2018},
+   month=jun, pages={6341–6346} }
+
+@ARTICLE{Nguyen2022,
+  author={Nguyen, Cuong H. P. and Hoang, Nam H. and Lee, Seunghyeon and Vu, Hai L.},
+  journal={IEEE Transactions on Intelligent Transportation Systems}, 
+  title={A System Optimal Speed Advisory Framework for a Network of Connected and Autonomous Vehicles}, 
+  year={2022},
+  volume={23},
+  number={6},
+  pages={5727-5739},
+  keywords={Biological system modeling;Vehicle dynamics;Trajectory;Optimization;Fuels;Safety;Heuristic algorithms;Mixed-integer linear programming;dynamic traffic assignment;optimal speed advisory;bi-level control strategy;car following model;lane-changing model;connected and autonomous vehicles},
+  doi={10.1109/TITS.2021.3056696}}
+
+@Article{Simchon2020,
+AUTHOR = {Simchon, Lior and Rabinovici, Raul},
+TITLE = {Real-Time Implementation of Green Light Optimal Speed Advisory for Electric Vehicles},
+JOURNAL = {Vehicles},
+VOLUME = {2},
+YEAR = {2020},
+NUMBER = {1},
+PAGES = {35--54},
+URL = {https://www.mdpi.com/2624-8921/2/1/3},
+ISSN = {2624-8921},
+ABSTRACT = {Intelligent Transportation Systems (ITS), such as Green Light Optimal Speed Advisory (GLOSA) systems, can be used to reduce the energy consumption in modern vehicles. In particular, GLOSA systems provide driving strategies that can decrease both energy consumption and travel time. In this paper, we present a new method to calculate the optimal driving speeds based on traffic light data. To this end, a detailed formulation for the optimization problem is presented for a multi-segment route, based on an electric vehicle (EV) and traffic light models in an urban environment. Since this formulation results in a nonconvex optimization problem, a relaxation procedure is applied with a low calculation time. By using this procedure, a dynamic real-time speed advisory algorithm is developed. Numerical simulations showed improved performance over benchmark techniques. In particular, the proposed Dynamic-GLOSA solution’s performance was shown to be very close to that with a brute-force optimal solution but with a much shorter calculation time and has significant potential for energy saving.},
+DOI = {10.3390/vehicles2010003}
+}
+
+@INPROCEEDINGS{Seredynski2013,
+  author={Seredynski, Marcin and Mazurczyk, Wojciech and Khadraoui, Djamel},
+  booktitle={2013 IEEE International Symposium on Parallel & Distributed Processing, Workshops and Phd Forum}, 
+  title={Multi-segment Green Light Optimal Speed Advisory}, 
+  year={2013},
+  volume={},
+  number={},
+  pages={459-465},
+  keywords={Vehicles;Fuels;Optimization;Schedules;Timing;Roads;Sociology;Traffic lights;GLOSA;Smart City;Optimisation;Genetic Algorithms},
+  doi={10.1109/IPDPSW.2013.157}}
+
+@misc{Zhou2015,
+      title={Parsimonious shooting heuristic for trajectory control of connected automated traffic part I: Theoretical analysis with generalized time geography}, 
+      author={Fang Zhou and Xiaopeng Li and Jiaqi Ma},
+      year={2015},
+      eprint={1511.04810},
+      archivePrefix={arXiv},
+      primaryClass={math.OC},
+      url={https://arxiv.org/abs/1511.04810}, 
+}
+
+@article{Zheng2015,
+  author    = {Yang Zheng and Biao Xu and Shengbo Eben Li and Jianqiang Wang and Keqiang Li},
+  title     = {Green Light Optimal Velocity Planning for Eco-driving: Computational Complexity and a Heuristic Algorithm},
+  journal   = {Extended Technical Report of the 14th Intelligent Transportation Systems Asia Pacific Forum},
+  year      = {2015},
+  month     = {June},
+  url       = {https://rosap.ntl.bts.gov/view/dot/80039},
+  note      = {This is an extended technical report based on a conference paper presented at the 14th ITS Asia Pacific Forum, Nanjing, China.}
+}
+
+@InProceedings{Kloeppel2019,
+  author    = {Kloeppel, Michael and Grimm, Jan and Strobl, Severin and Auerswald, Rico},
+  editor    = {Nathanail, Eftihia G. and Karakikes, Ioannis D.},
+  title     = {Performance Evaluation of GLOSA-Algorithms Under Realistic Traffic Conditions Using C2I-Communication},
+  booktitle = {Data Analytics: Paving the Way to Sustainable Urban Mobility},
+  year      = {2019},
+  publisher = {Springer International Publishing},
+  address   = {Cham},
+  pages     = {44--52},
+  isbn      = {978-3-030-02305-8}
+}
+
+@article{Kloeppel2020,
+author = {Klöppel-Gersdorf, Michael and Grimm, Jan},
+year = {2020},
+month = {11},
+pages = {303},
+title = {Evaluating Suitable Glosa-Algorithms by Simulation Considering Realistic Traffic Conditions and V2X-Communication},
+volume = {21},
+journal = {Transport and Telecommunication Journal},
+doi = {10.2478/ttj-2020-0025}
+}
+
+@mastersthesis{Lenz2024,
+  author      = {Marius Lenz},
+  title       = {Simulative Untersuchung des Einflusses eines GLOSA Systems auf den Verkehrsfluss an einer Kreuzung in Stuttgart},
+  school      = {Universität Stuttgart, Institut für Fahrzeugtechnik Stuttgart (IFS)},
+  year        = {2024},
+  address     = {Stuttgart},
+  type        = {Forschungsarbeit},
+  month       = {October},
+  note        = {Prüfer: Prof. Dr.-Ing. Hans-Christian Reuss. Institutsbetreuung: Dominik Salles, M.Sc.}
+}
+
+@misc{AudiV2I2016,
+  author    = {{GoMechanic Blog}},
+  title     = {Audi GLOSA: Green Light Optimised Speed Advisory},
+  year      = {2016},
+  url       = {https://gomechanic.in/blog/audi-glosa-green-light-optimised-speed-advisory/},
+  note      = {Accessed: 2025-05-25}
+}
+
+@misc{AudiTechTalk,
+  author    = {{Audi USA Media Center}},
+  title     = {Audi TechTalk Release No.\ 412},
+  year      = {2016},
+  url       = {https://media.audiusa.com/releases/412},
+  note      = {Accessed: 2025-05-25}
+}
+
+@misc{TTS2019,
+  author    = {{Traffic Technology Services, Inc.}},
+  title     = {Traffic Technology Services Inc.\ establishes Oregon DOT as first statewide Vehicle-to-Infrastructure service; escalates Virginia DOT to largest},
+  year      = {2019},
+  url       = {https://cachevalleyinfo.com/2019/02/20/traffic-technology-services-inc-establishes-oregon-dot-as-first-statewide-vehicle-to-infrastructure-service-escalates-virginia-dot-to-largest/},
+  note      = {Accessed: 2025-05-25}
+}
+
+@misc{ARCITSP57,
+  author       = {{ARC-IT}},
+  title        = {Service Package SP 57: Traffic Signal Priority},
+  howpublished = {\url{https://www.arc-it.net/html/servicepackages/sp57.html\?utm_source=chatgpt.com\#tab-8}},
+  note         = {Accessed: 2025-05-25}
+}
+
+@article{Mellegard2020,
+title = {The Day 1 C-ITS Application Green Light Optimal Speed Advisory—A Mapping Study},
+journal = {Transportation Research Procedia},
+volume = {49},
+pages = {170-182},
+year = {2020},
+note = {Facing the complexity of transport models and innovative developments in sustainable mobility - Selected Proceedings of the 47th European Transport Conference, ETC 2019},
+issn = {2352-1465},
+doi = {https://doi.org/10.1016/j.trpro.2020.09.015},
+url = {https://www.sciencedirect.com/science/article/pii/S2352146520307365},
+author = {Niklas Mellegård and Frida Reichenberg},
+keywords = {Mapping study, C-ITS, Green Light Optimal Speed Advisory (GLOSA), Traffic efficiency},
+abstract = {This article reports on a mapping study to investigate the C-ROADS Day 1 C-ITS application Green Light Optimal Speed Advisory (GLOSA). In the study, 64 publications between 2006 and 2019 where reviewed and classified according to a schema developed using thematic analysis of the selected publications. Among the findings were that the typical publication evaluates through simulation benefits for the equipped vehicle, leaving considerable gaps in investigations of societal effects. Additionally, there is a lack of investigation on driver behaviour, both for the equipped vehicle and for fellow road users—the ability to accurately model such behaviour is necessary for reliable simulation results.}
+}
+
+@techreport{CROADSPilot2022,
+  author       = {Pinkelnig, Alina and Gruber, Damaris Anna},
+  title        = {{C-Roads Annual Pilot Overview Report 2022}},
+  institution  = {C-Roads Platform},
+  year         = {2023},
+  month        = {November},
+  number       = {v1.2},
+  date         = {2023-11-24},
+  url          = {Annual_pilot_overview_report_2022.pdf},
+  note         = {Compiled by AustriaTech for the European C-ITS deployment platform}
+}
+
+@article{article,
+author = {Hao, Peng and Wu, Guoyuan and Boriboonsomsin, Kanok and Barth, Matthew},
+year = {2018},
+month = {03},
+pages = {1-11},
+title = {Eco-Approach and Departure (EAD) Application for Actuated Signals in Real-World Traffic},
+volume = {PP},
+journal = {IEEE Transactions on Intelligent Transportation Systems},
+doi = {10.1109/TITS.2018.2794509}
+}
+
+@phdthesis{xia2014,
+  author       = {Haitao Xia},
+  title        = {Eco-Approach and Departure Techniques for Connected Vehicles at Signalized Traffic Intersections},
+  school       = {University of California, Riverside},
+  year         = {2014},
+  type         = {Ph.D. Dissertation},
+  url          = {https://escholarship.org/uc/item/5xz408r4},
+  note         = {Advisor: Matthew Barth}
+}
+
+@techreport{FHWA2016,
+  author       = {Abubakr, M. and Abucharr, O. and Al-Stouhi, S. and Buchard, M. and Das, S. and Ibrahim, U. and Kailas, A. and Konet, H. and Kumar, V. and Meier, J. and Yamamoto, M. and Balke, K. and Kuhn, B. and Lukuc, Mike and Poe, C. and LeBlanc, D. and Barth, M. and Deering, R. and Goudy, R.},
+  title        = {Eco-Approach and Eco-Departure Planning Study [Final Report]},
+  institution  = {Crash Avoidance Metrics Partners},
+  year         = {2016},
+  month        = {jan},
+  day          = {31},
+  number       = {FHWA-JPO-16-335},
+  url          = {/view/dot/31750},
+  note         = {Corporate Contributor: United States. Federal Highway Administration}
+}
+
+@INPROCEEDINGS{Eckhoff2013,
+  author={Eckhoff, David and Halmos, Bastian and German, Reinhard},
+  booktitle={2013 IEEE Vehicular Networking Conference}, 
+  title={Potentials and limitations of Green Light Optimal Speed Advisory systems}, 
+  year={2013},
+  volume={},
+  number={},
+  pages={103-110},
+  keywords={Vehicles;Air pollution;Fuels;Acceleration;Gears;Conferences;Green products},
+  doi={10.1109/VNC.2013.6737596}}
+
+@article{Stahlmann2018,
+title = {Exploring GLOSA systems in the field: Technical evaluation and results},
+journal = {Computer Communications},
+volume = {120},
+pages = {112-124},
+year = {2018},
+issn = {0140-3664},
+doi = {https://doi.org/10.1016/j.comcom.2017.12.006},
+url = {https://www.sciencedirect.com/science/article/pii/S014036641730419X},
+author = {Rainer Stahlmann and Malte Möller and Alexej Brauer and Reinhard German and David Eckhoff},
+keywords = {GLOSA, EAD, ESC, DRIVE C2X, Field trial, Evaluation},
+}
+
+@article{Martinez2020,
+author = {Martínez, Alejandro and cañibano, Esteban and Romo, Javier},
+year = {2020},
+month = {02},
+pages = {1249},
+title = {Analysis of Low Cost Communication Technologies for V2I Applications},
+volume = {10},
+journal = {Applied Sciences},
+doi = {10.3390/app10041249}
+}
+
+@INPROCEEDINGS{Katsaros2011,
+  author={Katsaros, Konstantinos and Kernchen, Ralf and Dianati, Mehrdad and Rieck, David},
+  booktitle={2011 7th International Wireless Communications and Mobile Computing Conference}, 
+  title={Performance study of a Green Light Optimized Speed Advisory (GLOSA) application using an integrated cooperative ITS simulation platform}, 
+  year={2011},
+  volume={},
+  number={},
+  pages={918-923},
+  keywords={Vehicles;Fuels;Roads;Measurement;Acceleration;Data models;IEEE standards;vehicular communications;traffic light advisory;fuel consumption;traffic congestion},
+  doi={10.1109/IWCMC.2011.5982524}}
+
+@article{Yoshizawa2022,
+   title={A Survey of Security and Privacy Issues in V2X Communication Systems},
+   volume={55},
+   ISSN={1557-7341},
+   url={http://dx.doi.org/10.1145/3558052},
+   DOI={10.1145/3558052},
+   number={9},
+   journal={ACM Computing Surveys},
+   publisher={Association for Computing Machinery (ACM)},
+   author={Yoshizawa, Takahito and Singelée, Dave and Muehlberg, Jan Tobias and Delbruel, Stephane and Taherkordi, Amir and Hughes, Danny and Preneel, Bart},
+   year={2023},
+   month=jan, pages={1–36} }
+
+@article{Otto2023,
+author = {Otto, Thomas and Partzsch, Ina and Holfeld, Jörg and Klöppel-Gersdorf, Michael and Ivanitzki, Victor},
+year = {2023},
+month = {06},
+pages = {7650},
+title = {Designing a C-ITS Communication Infrastructure for Traffic Signal Priority of Public Transport},
+volume = {13},
+journal = {Applied Sciences},
+doi = {10.3390/app13137650}
+}
+
+@article{Application2011,
+author = {Katsaros, Konstantinos and Kernchen, Ralf and Dianati, Mehrdad and Rieck, David and Zinoviou, Charalambos},
+year = {2011},
+month = {12},
+pages = {1657-1667},
+title = {Application of vehicular communications for improving the efficiency of traffic in Urban areas},
+volume = {11},
+journal = {Wireless Communications and Mobile Computing},
+doi = {10.1002/wcm.1233}
+}
+
+@inproceedings{Xia2013,
+author = {Xia, Haitao and Wu, Guoyuan and Boriboonsomsin, Kanok and Barth, Matthew},
+booktitle = {Proceedings of the IEEE 16th International Conference on Intelligent Transportation Systems (ITSC 2013)},
+year = {2013},
+month = {10},
+pages = {296-301},
+title = {Development and evaluation of an enhanced eco-approach traffic signal application for Connected Vehicles},
+isbn = {978-1-4799-2914-6},
+journal = {IEEE Conference on Intelligent Transportation Systems, Proceedings, ITSC},
+doi = {10.1109/ITSC.2013.6728248}
+}
+
+@techreport{Cloud2016,
+  author       = {Schneeberger, J.~D. and Hicks, Drennan and Glassco, Rick and Drumwright, Lynette},
+  title        = {Applications for the Environment: Real-Time Information Synthesis (AERIS) Eco-Signal Operations: Operational Concept},
+  institution  = {Noblis, Inc.},
+  year         = {2013},
+  month        = oct,
+  day          = {1},
+  number       = {FHWA-JPO-13-113},
+  url          = {/view/dot/3419}
+}
+
+@inbook{Aifadopoulou2019,
+author = {Ayfantopoulou, Georgia and Bratsas, Charalampos and Koupidis, Kleanthis and Chatzopoulou, Aikaterini and Salanova Grau, Josep Maria and Tzenos, Panagiotis},
+year = {2019},
+month = {01},
+pages = {181-188},
+title = {Short-Term Prediction of the Traffic Status in Urban Places Using Neural Network Models: Proceedings of 4th Conference on Sustainable Urban Mobility (CSUM2018), 24 - 25 May, Skiathos Island, Greece},
+isbn = {978-3-030-02304-1},
+doi = {10.1007/978-3-030-02305-8_22},
+publisher = {Springer},
+}
